tests/regression/errors/basic/syntax_error_13.csd
// Syntax error test 13 - missing semicolon
sus x drip = 13
sus y drip = x +   // Missing operand
vibez.spill("This should not execute")
